[gd_scene load_steps=33 format=3 uid="uid://di3jfrboebmws"]

[ext_resource type="TileSet" uid="uid://cnpuw21l8ntc6" path="res://scenes/ground_tile.tres" id="1_l3u7j"]
[ext_resource type="Texture2D" uid="uid://cwgvd2gm3mkay" path="res://assets/character/rpg-character_transparent.png" id="2_nksxc"]
[ext_resource type="Script" path="res://scripts/Character.gd" id="2_s1ruk"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="3_x3dgk"]
[ext_resource type="Texture2D" uid="uid://cyhy1o8ra1b7k" path="res://assets/highlight.png" id="5_38jlr"]
[ext_resource type="Script" path="res://scripts/UIManager.gd" id="6_2dql0"]
[ext_resource type="Texture2D" uid="uid://dflwoc7yimvc8" path="res://assets/icon/shield.svg" id="7_2d38y"]
[ext_resource type="Texture2D" uid="uid://dxlkpuq0r25cm" path="res://assets/character/rpg-character_icon.png" id="7_2lxbn"]
[ext_resource type="Texture2D" uid="uid://d260lw5aebvhd" path="res://assets/icon/gladius.svg" id="7_q6yxf"]
[ext_resource type="FontFile" uid="uid://bpevby5jsckb8" path="res://assets/font/ark-pixel-12px-monospaced-zh_cn.ttf" id="8_mf4kv"]
[ext_resource type="Texture2D" uid="uid://dt70b2md2ckap" path="res://assets/icon/clover.svg" id="10_id4at"]
[ext_resource type="Texture2D" uid="uid://do103gbf2nugs" path="res://assets/icon/hearts.svg" id="10_ob2rm"]
[ext_resource type="Texture2D" uid="uid://b8a4td11s0ia8" path="res://assets/icon/barefoot.svg" id="10_xr6tq"]
[ext_resource type="Texture2D" uid="uid://bxui501eh6xrj" path="res://assets/icon/bullseye.svg" id="12_qck18"]
[ext_resource type="Texture2D" uid="uid://bjnodbb1crchv" path="res://assets/icon/dodging.svg" id="12_tingi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4mkwo"]
size = Vector2(256, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1wx6"]
size = Vector2(256, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gb0eh"]
size = Vector2(32, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x22e4"]
size = Vector2(32, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fthmr"]
size = Vector2(5, 5)

[sub_resource type="Animation" id="Animation_wkgao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_tur7y"]
resource_name = "movedown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qt0q4"]
resource_name = "moveleft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_3o5bp"]
resource_name = "moveright"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ynk1y"]
resource_name = "moveup"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jcjxj"]
_data = {
"RESET": SubResource("Animation_wkgao"),
"movedown": SubResource("Animation_tur7y"),
"moveleft": SubResource("Animation_qt0q4"),
"moveright": SubResource("Animation_3o5bp"),
"moveup": SubResource("Animation_ynk1y")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ddv83"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwcxd"]
bg_color = Color(0.00784314, 0.0235294, 0.0666667, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4142"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.815686, 1, 0.815686, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_mb0mk"]
font = ExtResource("8_mf4kv")
outline_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_0d556"]
font = ExtResource("8_mf4kv")
font_size = 10
outline_size = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ut88c"]

[node name="Main" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_l3u7j")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131072, 4, 65536, 131072, 4, 131072, 131072, 4, 196608, 131072, 4, 262144, 131072, 4, 327680, 131072, 4, 393216, 131072, 4, 1, 131072, 4, 65537, 0, 1, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 2, 131072, 4, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 1, 327682, 0, 0, 393218, 0, 0, 3, 131072, 4, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 1, 4, 131072, 4, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 5, 131072, 4, 65541, 0, 1, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 6, 131072, 4, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 1, 393222, 0, 0, 458752, 131072, 4, 458753, 131072, 4, 458754, 131072, 4, 458755, 131072, 4, 458756, 131072, 4, 458757, 131072, 4, 458758, 131072, 4, 7, 131072, 4, 65543, 131072, 4, 131079, 131072, 4, 196615, 131072, 4, 262151, 131072, 4, 327687, 131072, 4, 393223, 131072, 4, 458759, 131072, 4)

[node name="Clips" type="Area2D" parent="."]

[node name="Bottom" type="CollisionShape2D" parent="Clips"]
position = Vector2(128, 240)
shape = SubResource("RectangleShape2D_4mkwo")

[node name="Top" type="CollisionShape2D" parent="Clips"]
position = Vector2(128, 16)
shape = SubResource("RectangleShape2D_b1wx6")

[node name="Right" type="CollisionShape2D" parent="Clips"]
position = Vector2(240, 128)
shape = SubResource("RectangleShape2D_gb0eh")

[node name="Left" type="CollisionShape2D" parent="Clips"]
position = Vector2(16, 128)
shape = SubResource("RectangleShape2D_x22e4")

[node name="Grid" type="Node2D" parent="."]
z_index = 1
z_as_relative = false
script = ExtResource("3_x3dgk")

[node name="Highlight" type="Sprite2D" parent="."]
z_as_relative = false
position = Vector2(192, 64)
texture = ExtResource("5_38jlr")
centered = false

[node name="Character" type="Area2D" parent="."]
z_index = 2
z_as_relative = false
position = Vector2(192, 64)
collision_layer = 31
collision_mask = 31
script = ExtResource("2_s1ruk")
speed = 6

[node name="Collision" type="CollisionShape2D" parent="Character"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_fthmr")

[node name="CharacterSprite" type="Sprite2D" parent="Character"]
position = Vector2(0, -40)
texture = ExtResource("2_nksxc")
centered = false
hframes = 4
vframes = 4
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character/CharacterSprite"]
libraries = {
"": SubResource("AnimationLibrary_jcjxj")
}

[node name="TransformCamera" type="RemoteTransform2D" parent="Character"]

[node name="PointingRayLeft" type="RayCast2D" parent="Character"]
position = Vector2(16, 16)
target_position = Vector2(-32, 0)
collision_mask = 31
collide_with_areas = true

[node name="PointingRayUp" type="RayCast2D" parent="Character"]
position = Vector2(16, 16)
target_position = Vector2(0, -32)
collision_mask = 31
collide_with_areas = true

[node name="PointingRayDown" type="RayCast2D" parent="Character"]
position = Vector2(16, 16)
target_position = Vector2(0, 32)
collision_mask = 31
collide_with_areas = true

[node name="PointingRayRight" type="RayCast2D" parent="Character"]
position = Vector2(16, 16)
target_position = Vector2(32, 0)
collision_mask = 31
collide_with_areas = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(131, 128)
zoom = Vector2(2.5, 2.5)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_2dql0")

[node name="UseItem" type="Button" parent="Control"]
editor_description = "主动道具"
offset_left = -91.0
offset_top = 197.0
offset_right = -14.0
offset_bottom = 242.0
theme_override_styles/normal = SubResource("StyleBoxLine_ddv83")
text = "主动道具"

[node name="MonsterInfoBox" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 264.0
offset_top = 2.0
offset_right = 353.0
offset_bottom = 42.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lwcxd")

[node name="AvatarFrame" type="Panel" parent="Control/MonsterInfoBox"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 37.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_v4142")

[node name="TextureRect" type="TextureRect" parent="Control/MonsterInfoBox/AvatarFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -12.5
offset_right = 12.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_2lxbn")
expand_mode = 1

[node name="PlayerValueBox" type="Panel" parent="Control"]
layout_mode = 0
offset_left = -95.0
offset_top = 44.0
offset_right = -39.0
offset_bottom = 172.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lwcxd")

[node name="IconATT" type="TextureRect" parent="Control/PlayerValueBox"]
modulate = Color(1, 0.156863, 0, 1)
texture_filter = 1
layout_mode = 1
offset_left = 14.0
offset_top = 9.0
offset_right = 30.0
offset_bottom = 25.0
texture = ExtResource("7_q6yxf")
expand_mode = 1

[node name="LabelATT" type="Label" parent="Control/PlayerValueBox"]
layout_mode = 1
offset_left = 33.0
offset_top = 8.0
offset_right = 73.0
offset_bottom = 28.0
text = "3"
label_settings = SubResource("LabelSettings_mb0mk")

[node name="IconDEF" type="TextureRect" parent="Control/PlayerValueBox"]
modulate = Color(0, 0.509804, 1, 1)
texture_filter = 1
layout_mode = 1
offset_left = 12.0
offset_top = 29.0
offset_right = 28.0
offset_bottom = 45.0
texture = ExtResource("7_2d38y")
expand_mode = 1

[node name="LabelDEF" type="Label" parent="Control/PlayerValueBox"]
layout_mode = 1
offset_left = 32.0
offset_top = 29.0
offset_right = 72.0
offset_bottom = 49.0
text = "3"
label_settings = SubResource("LabelSettings_mb0mk")

[node name="LabelSPD" type="Label" parent="Control/PlayerValueBox"]
layout_mode = 0
offset_left = 32.0
offset_top = 50.0
offset_right = 72.0
offset_bottom = 70.0
text = "3"
label_settings = SubResource("LabelSettings_mb0mk")

[node name="IconSPD" type="TextureRect" parent="Control/PlayerValueBox"]
modulate = Color(0.388235, 1, 1, 1)
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 50.0
offset_right = 29.0
offset_bottom = 66.0
texture = ExtResource("10_xr6tq")
expand_mode = 1

[node name="IconLUCK" type="TextureRect" parent="Control/PlayerValueBox"]
modulate = Color(0.878431, 1, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 12.0
offset_top = 73.0
offset_right = 28.0
offset_bottom = 89.0
texture = ExtResource("10_id4at")
expand_mode = 1

[node name="IconCRI" type="TextureRect" parent="Control/PlayerValueBox"]
modulate = Color(0.905882, 0.658824, 0.184314, 1)
texture_filter = 1
layout_mode = 0
offset_left = 14.0
offset_top = 109.0
offset_right = 24.0
offset_bottom = 119.0
texture = ExtResource("12_qck18")
expand_mode = 1

[node name="LabelCRI" type="Label" parent="Control/PlayerValueBox"]
layout_mode = 0
offset_left = 29.0
offset_top = 109.0
offset_right = 45.0
offset_bottom = 123.0
text = "25%"
label_settings = SubResource("LabelSettings_0d556")

[node name="IconDOG" type="TextureRect" parent="Control/PlayerValueBox"]
modulate = Color(0.709804, 0.709804, 0.709804, 1)
texture_filter = 1
layout_mode = 0
offset_left = 14.0
offset_top = 95.0
offset_right = 24.0
offset_bottom = 105.0
texture = ExtResource("12_tingi")
expand_mode = 1

[node name="LabelDOG" type="Label" parent="Control/PlayerValueBox"]
layout_mode = 0
offset_left = 29.0
offset_top = 94.0
offset_right = 45.0
offset_bottom = 108.0
text = "25%"
label_settings = SubResource("LabelSettings_0d556")

[node name="LabelLUCK" type="Label" parent="Control/PlayerValueBox"]
layout_mode = 0
offset_left = 32.0
offset_top = 73.0
offset_right = 72.0
offset_bottom = 93.0
text = "3"
label_settings = SubResource("LabelSettings_mb0mk")

[node name="PlayerInfoBox" type="Panel" parent="Control"]
layout_mode = 0
offset_left = -95.0
offset_top = 4.0
offset_right = -11.0
offset_bottom = 38.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lwcxd")

[node name="AvatarFrame" type="Panel" parent="Control/PlayerInfoBox"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 37.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_v4142")

[node name="TextureRect" type="TextureRect" parent="Control/PlayerInfoBox/AvatarFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -12.5
offset_right = 12.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_2lxbn")
expand_mode = 1

[node name="IconATT" type="TextureRect" parent="Control/PlayerInfoBox"]
modulate = Color(1, 0.156863, 0.811765, 1)
texture_filter = 1
layout_mode = 0
offset_left = 42.0
offset_top = 9.0
offset_right = 59.0
offset_bottom = 24.0
texture = ExtResource("10_ob2rm")
expand_mode = 1

[node name="LabelATT" type="Label" parent="Control/PlayerInfoBox"]
layout_mode = 0
offset_left = 61.0
offset_top = 8.0
offset_right = 101.0
offset_bottom = 28.0
text = "12"
label_settings = SubResource("LabelSettings_mb0mk")

[node name="Monster" type="CharacterBody2D" parent="." groups=["Monster"]]
position = Vector2(111, 80)
collision_layer = 31
collision_mask = 5

[node name="MonsterCol" type="CollisionShape2D" parent="Monster"]
shape = SubResource("RectangleShape2D_ut88c")

[node name="MonsterSprite" type="Sprite2D" parent="Monster"]
texture = ExtResource("7_2lxbn")
